--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 @layer components {
   .fullscreen {
     width: 100%;
-    height: calc(100vh - 64px);
+    min-height: calc(100vh - 64px);
   }
 }
 
