--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .fullscreen {
+    width: 100%;
+    min-height: calc(100vh - 64px);
+  }
+}
+
+body {
+  font-family: "Outfit", sans-serif;
+  background-color: #0f172a;
+  color: #ffff;
+}
 
 @layer base {
   :root {
